--- a/artwork_storage.html
+++ b/artwork_storage.html
@@ -22,14 +22,14 @@
     </div>
     <div class="char">
         <a href="https://perecreate.itch.io/">
-    <img src="Artworks\Character Design\char3.png" alt="Character Design 3">
+    <img src="Artworks\Character Design\Char3.png" alt="Character Design 3">
     </a>
     </div>
     <div class="char">
-    <img src="Artworks\Character Design\char4.png" alt="Character Design 4">
+    <img src="Artworks\Character Design\Char4.png" alt="Character Design 4">
     </div>
     <div class="char">
-    <img src="Artworks\Character Design\char5.png" alt="Character Design 5">
+    <img src="Artworks\Character Design\Char5.png" alt="Character Design 5">
     </div>
     </div>
 
