--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <a href="https://github.com/Perennial123">Github</a>
         <a href="https://www.youtube.com/@PereCreate">YouTube</a>
         <a href="https://www.tumblr.com/perecreate">tumblr</a>
+        <a href="peredesign1@gmail.com">peredesign1@gmail.com</a>
         
     </div>
     </section>
