--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
     <div class="top"> 
     <a href='https://perecreate.itch.io/'><img src="perecreate-img.jpg" alt="PereCreate Logo" class="logo"></a>
     </div>
-  <h1>Welcome to PereCreate's Gallery</h1>
+  <h1>Welcome to PereCreate's Website</h1>
+
+  <div class="main-content">
+  <p>Hello! This is PereCreate/Susie Yang's personal website.</p>
+  <p>I am a passionate person in art, films, and data science.</p>
+    <p>Feel free to explore my art gallery and contact me through the links below!</p>
+    </div>
     
-    <section>
         <h2>
             <a href="artwork_storage.html">My Art Gallery</a>
         </h2>
-    </section>
+
 
     <section>
     <div class="channels">
